--- a/package.json
+++ b/package.json
@@ -20,9 +20,9 @@
   "scripts": {
     "prepare": "npm run build",
     "test": "echo 'no tests yet'",
-    "lint": "eslint ./ --ext .js,.ts",
+    "lint": "eslint .",
     "build": "tsc -p tsconfig.build.json",
-    "test:int": "BREK_CONFIG_DIR=integration-tests/config BREK_WRITE_DIR=integration-tests/config BREK_LOADERS_FILE_PATH=integration-tests/brek.loaders.js hoare 'integration-tests/**/*.spec.ts'"
+    "test:int": "BREK_CONFIG_DIR=integration-tests/config BREK_WRITE_DIR=integration-tests/config BREK_LOADERS_FILE_PATH=integration-tests/brek.loaders.js kizu 'integration-tests/**/*.spec.ts'"
   },
   "homepage": "https://github.com/mhweiner/brek-loader-aws-secrets-manager",
   "keywords": [
@@ -49,19 +49,15 @@
     "lambdaconf"
   ],
   "devDependencies": {
-    "@types/node": "17.0.45",
-    "@types/sinon": "^10.0.6",
-    "@typescript-eslint/eslint-plugin": "^5.7.0",
-    "@typescript-eslint/parser": "^5.7.0",
-    "c8": "^7.10.0",
-    "cjs-mock": "1.4.14",
-    "eslint": "^8.4.1",
-    "hoare": "3.3.1",
-    "sinon": "^12.0.1",
-    "ts-node": "^10.4.0",
-    "typescript": "^4.5.4"
+    "@types/node": "^22.0.0",
+    "cjs-mock": "^1.4.14",
+    "eslint": "^10.0.0",
+    "kizu": "^4.0.0",
+    "ts-node": "^10.9.0",
+    "typescript": "^5.6.0",
+    "typescript-eslint": "^8.0.0"
   },
   "dependencies": {
-    "@aws-sdk/client-secrets-manager": "3.620.1"
+    "@aws-sdk/client-secrets-manager": "^3.995.0"
   }
 }
